<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#4F9CA3"
    tools:context=".Authority">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#4F9CA3"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="110dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="PIN : "
            android:textStyle="bold"
            android:textSize="20dp"

            />
        <EditText
            android:id="@+id/pinId"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="XXXX"
            />


    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Update the following fields"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textColor="#FF5722"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textAllCaps="false"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/available_icu"
                android:textStyle="bold"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/availableIcuId"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Vacant ICU"
                />




        </LinearLayout>
        <Button
            android:id="@+id/updicuId"
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="update"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/icu_charge"
                android:textStyle="bold"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/icucostId"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="BDT "
                />


        </LinearLayout>
        <Button
            android:id="@+id/updicucostId"
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="update"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/surgery_cost"
                android:textStyle="bold"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/surgerycostId"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="BDT "
                />


        </LinearLayout>
        <Button
            android:id="@+id/updsurgeryId"
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="update"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/ecg_cost"
                android:textStyle="bold"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/ecgcostId"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="BDT "
                />


        </LinearLayout>
        <Button
            android:id="@+id/updecgId"
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="update"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/x_ray_cost"
                android:textStyle="bold"
                android:textSize="20dp"

                />
            <EditText
                android:id="@+id/xraycostId"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="BDT"
                />


        </LinearLayout>
        <Button
            android:id="@+id/updxrayId"
            android:paddingLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="update"
            />

    </LinearLayout>



</ScrollView>